--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Arun",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^3.0.0",
     "validator": "^10.8.0",
     "yargs": "^15.1.0"
   }
